[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Archer.gd" type="Script" id=1]
[ext_resource path="res://Tilesets/Pixelart_Medieval_Fantasy_Characters_Pack/Enemies/Archer_Variant/Archer_Spritesheet.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=41]

[sub_resource type="CircleShape2D" id=42]

[sub_resource type="Animation" id=43]
resource_name = "Attack"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_shootArrow"
} ]
}

[sub_resource type="Animation" id=47]
resource_name = "Dead"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=46]
resource_name = "Hit"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.00392157, 0.00392157, 1 ), Color( 0.894118, 0.309804, 0.109804, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=44]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=45]
resource_name = "Running"
length = 0.5
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[node name="Archer" type="KinematicBody2D"]
position = Vector2( 218, 24 )
scale = Vector2( 0.25, 0.25 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )
MaxHealth = 30
CurrentHealth = 30
hFrames = 1
vFrames = 8

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 8
frame = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 7 )
scale = Vector2( 1, 0.95 )
shape = SubResource( 41 )

[node name="ArrowShoot" type="Node2D" parent="."]
position = Vector2( -24.0001, -12 )

[node name="GroundCheck" type="RayCast2D" parent="."]
position = Vector2( -15, 0 )
enabled = true

[node name="RightCheck" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 50, 0 )
collision_mask = 2

[node name="LeftCheck" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -50, 0 )
collision_mask = 2

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 0, 7 )
scale = Vector2( 1, 0.95 )
shape = SubResource( 41 )

[node name="AttackRange" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
scale = Vector2( 20, 20 )
shape = SubResource( 42 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 43 )
anims/Dead = SubResource( 47 )
anims/Hit = SubResource( 46 )
anims/RESET = SubResource( 44 )
anims/Running = SubResource( 45 )

[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="area_entered" from="AttackRange" to="." method="_on_AttackRange_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
